
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 int exit (int ) ;
 int perror (char*) ;
 int write (int,char*,size_t) ;

__attribute__((used)) static void write_file(int fd, char *buffer, size_t length) {
 int rv = write(fd, buffer, length);
 if (rv != length) {
  perror("[-] write()");
  exit(EXIT_FAILURE);
 }
}
